# fastapi-payfast

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
examples/: .env.example  basic_usage.py  requirements.txt
fastapi_payfast/: __init__.py  client.py  config.py  exceptions.py  models.py  utils.py
tests/: README.md  __init__.py  conftest.py  test_client.py  test_config.py  test_exceptions.py  test_models.py  test_utils.py
